--- a/src/pages/pc/stylus/common.styl
+++ b/src/pages/pc/stylus/common.styl
@@ -26,3 +26,21 @@ html
   background: rgb(68, 68, 68);
   border-radius: 10px;
 }
+ul
+  list-style none
+  padding 0
+  margin 0
+.text-right
+  text-align right
+
+.table-blue
+  font-size: 12px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #3269F0;
+
+.table-default
+  font-size: 12px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #1D2157;
