--- a/src/pages/pc/stylus/common.styl
+++ b/src/pages/pc/stylus/common.styl
@@ -44,3 +44,34 @@ ul
   font-family: PingFangSC-Regular, PingFang SC;
   font-weight: 400;
   color: #1D2157;
+.table-wrap
+  .thead >div, .trow >div
+    &:nth-of-type(1)
+      text-align left
+    &:last-of-type
+      text-align right
+    text-align center
+    position relative
+    width 25%
+    white-space nowrap
+    overflow hidden
+    text-overflow ellipsis
+
+.thead
+    width 100%
+    height: 35px;
+    background: #F7F9FC;
+    display flex
+    align-items center
+    font-size: 12px;
+    font-family: PingFangSC-Medium, PingFang SC;
+    font-weight: 500;
+    color: #1D2157;
+    padding 0 20px
+    box-sizing border-box
+  .trow
+    display flex
+    align-items center
+    padding 0 20px
+    box-sizing border-box
+    padding-top 14px
