--- a/src/pages/pc/stylus/variable.styl
+++ b/src/pages/pc/stylus/variable.styl
@@ -1,7 +1,15 @@
 $visualWidth=1200px
 $color=#999
 $tableBlue=#3269F0
+$yellow=#F8BA34
+$green=#43C588
 .ell
   white-space nowrap
   overflow hidden
   text-overflow ellipsis
+
+.yellow--text
+  color: $yellow;
+
+.green--text
+  color: $green;
