--- a/src/pages/pc/stylus/common.styl
+++ b/src/pages/pc/stylus/common.styl
@@ -34,29 +34,29 @@ ul
   text-align right
 
 .table-blue
-  font-size: 12px;
-  font-family: PingFangSC-Regular, PingFang SC;
   font-weight: 400;
   color: #3269F0;
 
 .table-default
-  font-size: 12px;
-  font-family: PingFangSC-Regular, PingFang SC;
   font-weight: 400;
   color: #1D2157;
 .table-wrap
-  .thead >div, .trow >div
+  .thead >div, .trow >.tcell
     &:nth-of-type(1)
       text-align left
     &:last-of-type
       text-align right
+    font-size: 12px;
+    font-family: PingFangSC-Regular, PingFang SC;
     text-align center
     position relative
     width 25%
     white-space nowrap
     overflow hidden
     text-overflow ellipsis
-
+  .thead>div
+    font-weight: 500;
+    color: #1D2157;
 .thead
     width 100%
     height: 35px;
