--- a/src/pages/pc/stylus/common.styl
+++ b/src/pages/pc/stylus/common.styl
@@ -1,31 +1,22 @@
 
 html
   overflow-x hidden
+:root
+  --scrollbar-bg: rgb(1 2 3 / 40%);
+
 ::selection
   background #333
   color #f1f1f1
 ::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: rgb(170, 170, 170);
+  width: 6px;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(100, 100, 100);
+  background: var(--scrollbar-bg);
   border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: rgb(100, 100, 100);
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:active {
-  background: rgb(68, 68, 68);
-  border-radius: 10px;
-}
 ul
   list-style none
   padding 0
