--- a/src/pages/pc/stylus/common.styl
+++ b/src/pages/pc/stylus/common.styl
@@ -33,6 +33,8 @@ ul
   color: #1D2157;
 .table-wrap
   .thead >div, .trow >.tcell
+    &.tag
+      overflow unset
     &:nth-of-type(1)
       text-align left
     &:last-of-type
@@ -66,3 +68,6 @@ ul
     padding 0 20px
     box-sizing border-box
     padding-top 14px
+
+.show
+  display block !important
